Phase 1 done including read.md

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
 
 <body>
     <div class="dropdown">
-        <select id="dropdown" onchange="locationData()">
+        <select id="dropdown" onclick="locationData()">
         <option value="Jaipur"> Jaipur </option>
         <option value="Jodhpur"> Jodhpur </option>
         <option value="Udaipur"> Udaipur </option>
       </select>
-        <p id="renderPara"></p>
+    </div>
+    <div class="result">
+        <p id="resultPara"></p>
     </div>
     <script src=" assets/js/main.js "></script>
 </body>
